--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
     </section>
 
     <section class="inquiry-section" id="contact">           
-            <h1 class="big-medium-font">WORK INQUIRY</h1>
-            <a class="link-button" href="mailto:samssjubair@gmail.com">Lets Chat</a>
+            <div class="same-line">
+                <h1 class="big-medium-font" id="inquiry-text">WORK INQUIRY</h1>
+            </div>
+            <div class="same-line">
+                <a class="link-button" id="inquiry-button" href="mailto:samssjubair@gmail.com">Lets Chat</a>
+            </div>
     </section>
     <footer>
         
