inquiry box problem solved

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     </section>
 
     <section class="inquiry-section" id="contact">           
-            <div class="same-line">
-                <h1 class="big-medium-font" id="inquiry-text">WORK INQUIRY</h1>
+            <div class="same-line"id="inquiry-text">
+                <h1 class="big-medium-font" >WORK INQUIRY</h1>
             </div>
-            <div class="same-line">
-                <a class="link-button" id="inquiry-button" href="mailto:samssjubair@gmail.com">Lets Chat</a>
+            <div class="same-line" id="inquiry-button">
+                <a class="link-button" id="extra-padding" href="mailto:samssjubair@gmail.com">Let's Chat</a>
             </div>
     </section>
     <footer>
